fix: PopOvers work on small screens as well now Fixes #2592

--- a/source/win-main/popup-provider/popover.less
+++ b/source/win-main/popup-provider/popover.less
@@ -88,7 +88,7 @@ body .popover {
   border-radius: 8px;
   position: fixed;
   max-width: 350px; // Maximum width.
-  max-height: 600px; // Maximum height. If its too much simply scroll.
+  max-height: 50vh; // Maximum height. If its too much simply scroll.
   overflow-y: auto;
   overflow-x: hidden;
   padding: 5px;
